# plugin-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  aoe-plugin.toml  cliff.toml  pyproject.toml
.github/workflows/: checks.yml  pr-title-check.yml
src/aoe_mcp_plugin/: __init__.py  badges.py  main.py  reconcile.py  rpc.py  servers.py  uistate.py
tests/: test_badges.py  test_manifest.py  test_reconcile.py  test_servers.py  test_uistate.py  test_worker_badges.py  test_worker_contract.py
